# gpirt

./: .Rbuildignore  .gitignore  .travis.yml  CONTRIBUTING.md  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: RcppExports.R  format_dogpirt_responses.R  gpirt-package.R  gpirtMCMC.R  plot_irf.R  recover_fstar.R  response_matrix.R  senate116.R
data/: B5.rda  EQ.rda  EQ_SQ.rda  NFA_NTE_NFC.rda  NPI_MACH.rda  RWA.rda  SDO.rda  SQ.rda  SV.rda  senate116.rda
data-raw/: S116_rollcalls.csv  S116_votes.csv  senate116.R  sticker.R
inst/: CITATION
man/: format_dogpirt_responses.Rd  gpirtMCMC.Rd  plot_irf.Rd  recover_fstar.Rd  response_matrix.Rd  senate116.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  covariance-function.cpp  draw-beta.cpp  draw-f.cpp  draw-fstar.cpp  draw-theta-f.cpp  draw-theta.cpp  draw_threshold.cpp  gpirt.h  gpirtMCMC.cpp  log-likelihood.cpp  mvnormal.h  recover_fstar.cpp
tests/: testthat.R
tests/testthat/: test_response_matrix.R
vignettes/: gpirt-vignette.Rmd  vignette-references.bib
